force-app/main/default/objects/PlatformEventControl__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>PlatformEventControl for Record Batching</description>
    <fields>
        <fullName>Async_Process__c</fullName>
        <defaultValue>50</defaultValue>
        <description>Async_Process__e batch size</description>
        <label>General Async Process</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Event__c</fullName>
        <defaultValue>20</defaultValue>
        <description>Channel_Event__e batch size override</description>
        <inlineHelpText>Batch size for processing Channel Events</inlineHelpText>
        <label>Channel Event</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Point_Event__c</fullName>
        <defaultValue>20</defaultValue>
        <description>Contact_Point_Event__e batch size override</description>
        <inlineHelpText>Batch size for processing Contact Point Events</inlineHelpText>
        <label>Contact Point Event</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Attempt_Event__c</fullName>
        <description>Batch control for internal async course attempt events</description>
        <label>Course Attempt Event</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DCAStagingEvent_c__c</fullName>
        <label>DCA Staging Event</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Default Value Batch Records</description>
        <inlineHelpText>Default Value Batch Records</inlineHelpText>
        <label>Default</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duplicate_Contact_Event__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Duplicate_Contact_Event__e batch size override</description>
        <inlineHelpText>Batch size for processing Duplicate Contact Events</inlineHelpText>
        <label>Duplicate Contact Event</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Redirection_Event__c</fullName>
        <label>Email Redirection Event</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LoginAsEventProxy__c</fullName>
        <defaultValue>200</defaultValue>
        <label>Login-as Event Proxy</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PlatformEventControl</label>
</CustomObject>